# assertions

./: .gitignore  CMakeLists.txt  README.md  build.lua  build.sh  dependencies.sh  makefile  run.sh  test.sh
.assertions/: get_target_info.sh
.assertions/dependency_manager/: add.sh  install.sh  remove.sh
dependency_manager/directories/: init.lua
dependency_manager/filesystem/: init.lua
documentation/: class_assert_error.md  class_comparator.md  function_assert.md
src/: assert.cpp  assert.h
src/main/: benchmark_counter.cpp  hello_cli.cpp  hello_world.cpp
src/objs/assertions/: assert.cpp  assert.h  benchmark.cpp  benchmark.h  observer.cpp  observer.h  stopwatch.cpp  stopwatch.h
src/objs/io/: synchronous_iostream.h
src/objs/parallel/: atomic.h  execution_queue.cpp  execution_queue.h
src/objs/terminal/: live_terminal.cpp  live_terminal.h  manipulators.cpp  manipulators.h  stream.cpp  stream.h  terminal.cpp  terminal.h
src/objs/test/: assert.cpp  assert.h  live_terminal.cpp  low_level_error_handler.cpp  low_level_error_handler.h
tests/: CMakeLists.txt  clean_environments.sh  setup_environment.sh  test_assertions.cpp  test_benchmark_execution_time.cpp  test_build_fail.cpp  test_case_block.cpp  test_low_level_error.cpp  test_stopwatch.cpp  test_terminal_output.cpp  test_test_case_block.cpp  test_wiki_example.cpp
tests/dependency_manager/: add_git.cpp  remove_git.cpp
tests/dependency_manager/git_module/: add.cpp
tests/wiki/: overview.cpp  scope_confinement.cpp  scope_confinement_resilience.cpp
unity_tests/: assert_test.cpp
(+4 files in other folders)
